modules/static/construct.css
/* ... */
.ircd .room .main div.event.grouping_end
{
	padding-bottom: 6px;
}

.ircd .room div.main div.event.show_info
{
	border: 1px dashed var(--pal-DC);
}

.ircd .room div.main div.event div.timeline
{
	flex-flow: row nowrap;
	align-self: stretch;
	align-items: stretch;
	justify-content: center;
	border-left: 3px solid var(--pal-DE);
	border-bottom: 1px solid var(--pal-DE);
}

.ircd .room div.main div.event div.timeline .index
{
	min-width: 4ch;
	padding: 0px 5px 0px 5px;
	align-items: center;
	justify-content: flex-end;
	background-color: var(--pal-AA);
	font-size: calc(var(--fsF));
}

.ircd .room div.main div.event div.timeline .index:hover
{
	background-color: var(--pal-AB);
}

.ircd .room div.main div.event div.timeline div.info
{
	position: relative;
	padding: 5px 5px 5px 5px;
	border-radius: 0px 5px 5px 0px;
	background-color: var(--pal-AA);
}

.ircd .room div.main div.event div.timeline div.info .id
{
	align-items: flex-end;
	font-size: calc(var(--fsE));
	font-family: monospace;
	font-weight: bold;
	color: white;
	border-bottom: 1px solid var(--pal-AD);
}

.ircd .room div.main div.event div.timeline div.info form.event
{
	position: relative;
	margin-top: 5px;
	margin-bottom: 5px;
}

.ircd .room div.main div.event div.timeline div.info form.menu
{
	display: none
}

.ircd .room div.main div.event div.timeline div.info form.menu .name
{
	font-size: calc(var(--fsD));
}

.ircd .room div.main div.event div.timeline div.info form.menu i
{
	font-size: calc(var(--fsID));
}


.ircd .room div.main div.event .unhandled p
{
	font-family: monospace;
	font-size: 11px;
	line-height: 1em;
	color: var(--pal-CB) !important;
}

.ircd .room div.main div.event .sender,
.ircd .room div.main div.event .target
{
	flex-shrink: 0;
	flex-flow: row nowrap;
	align-self: stretch;
	align-items: flex-start;
	justify-content: flex-end;
	font-size: 16px;
	width: 20ch;
	white-space: nowrap;
	/* overflow-wrap: break-word; */
	/* overflow: hidden; */
	/* text-overflow: ellipsis; */
	text-shadow: 0px 0px #000000;
	letter-spacing: 0px;
	font-weight: normal;
	color: var(--pal-AB);
}

.ircd .room div.main div.event .sender
{
	padding: 0px 5px 0px 5px;
}

.ircd .room div.main div.event .target
{
	padding: 0px 0px 0px 10px;
}

.ircd .room div.main div.event .sender .name,
.ircd .room div.main div.event .target .name
{
	font-weight: normal;
	color: var(--pal-BB);
}

.ircd .room div.main div.event .sender .name.me
{
	color: var(--pal-BB);
	font-weight: bold;
}

.ircd .room div.main div.event .sender a.avatar,
.ircd .room div.main div.event .target a.avatar
{
	display: inline-flex;
	align-self: center;
	margin: auto 0px auto 0px;
}

.ircd .room div.main div.event .sender .avatar img,
.ircd .room div.main div.event .target .avatar img
{
	max-height: 16px;
	max-width: 16px;
	border-radius: 2px;
	padding: 1px 5px 1px 1px;
}

.ircd .room div.main div.event .sender .bracket,
.ircd .room div.main div.event .target .bracket
{
	align-self: center;
}

.ircd .room div.main div.event .sender .domain,
.ircd .room div.main div.event .target .domain
{
	align-self: center;
	font-size: 11px;
	color: var(--pal-AD);
	padding: 0px 1px 1px 2px;
}

/* Message events */

.ircd .room div.main div.event div.message
{
	align-self: flex-start;
	align-items: center;
	justify-content: flex-start;
	text-align: left;
	line-break: strict;
	color: var(--pal-AB);
	overflow-wrap: normal;
	padding-right: 8ch; /* added for the timestamp for now */
}

.ircd .room div.main div.event .message .default
{
	width: 100%;
	font-size: 11px;
	font-family: monospace;
	color: var(--pal-CC) !important;
	text-align: right;
	justify-content: flex-end;
}

.ircd .room div.main div.event .message p.text
{
	flex-grow: 0;
	font-family: Helvetica;
	padding: 0px 0px 0px 0px;
	font-size: calc(var(--fsPC));
	line-break: strict;
	word-wrap: normal;
	overflow-wrap: normal;
	white-space: pre-wrap;
	font-smoothing: antialiased;
	-moz-font-smoothing: antialiased;
	-webkit-font-smoothing: antialiased;
	text-rendering: optimizeLegibility;
	color: black;
}

.ircd .room div.main div.event .message div.notice
{
	max-width: 90%;
	max-height: 87vh;
	font-family: courier;
	line-height: 1.0em;
	line-break: strict;
	white-space: pre-wrap;
	padding: 1px 0px 1px 0px;
	margin: 2px 0px 2px 0px;
	word-wrap: break-word;
	word-break: break-all;
	overflow-wrap: break-word;
	overflow-x: auto;
	resize: both;
}

.ircd .room div.main div.event .message .emote
{
	flex-grow: 0;
	font-family: Arial;
	line-height: 1em;
	color: var(--pal-AC);
}

.ircd .room div.main div.event .message .image
{
	flex-flow: column nowrap;
	flex-grow: 1;
	justify-content: center;
	align-items: flex-start;
	border-left: 1px solid var(--pal-DA);
	margin: 1px 5px 1px 0px;
	padding-left: 5px;
}

.ircd .room div.main div.event .message .image.zoom
{
	align-items: center;
	padding-left: 0px;
	margin-right: 2px;
}

.ircd .room div.main div.event .message .image img
{
	flex-shrink: 0;
	height: 33vh;
	max-width: 100%;
	width: auto;
	object-fit: contain;
	padding: 1px 1px 1px 1px;
	overflow: visible;
	resize: both;
}

.ircd .room div.main div.event .message .image.zoom img
{
	width: auto;
	height: auto;
	max-width: 95%;
	max-height: 90vh;
	object-fit: contain;
	border-radius: 4px;
}

.ircd .room div.main div.event .message .image .label
{
	align-self: stretch;
	font-weight: bold;
	font-family: NixieOne;
	padding: 5px 5px 5px 5px;
	font-size: calc(var(--fsD));
	color: black;
}

.ircd .room div.main div.event .message .image.zoom .label
{
	background-color: var(--pal-DD);
	/* justify-content: center; */ /* detracts */ /* (art) */
}


/* State events */

.ircd .room .main div.state.event
{
	justify-content: stretch;
}

.ircd .room .main div.state.event div.handler
{
	flex-grow: 1;
	flex-flow: column nowrap;
	align-items: stretch;
	justify-content: center;
	margin: 0px 3px 0px 5px;
}
/* ... */

